--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@acme/books/data-access": ["books/data-access/src/index.ts"],
+      "@acme/books/ui": ["books/ui/src/index.ts"],
       "@acme/feature": ["books/src/index.ts"],
       "@acme/ui": ["ui/src/index.ts"]
     }
