--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "proxy": "http://localhost:3333",
   "dependencies": {
+    "@nrwl/express": "^19.5.1",
+    "axios": "^1.6.0",
+    "express": "^4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
@@ -18,11 +22,13 @@
     "@nx/cypress": "19.5.0",
     "@nx/eslint": "19.5.0",
     "@nx/eslint-plugin": "19.5.0",
-    "@nx/jest": "19.5.0",
-    "@nx/js": "19.5.0",
+    "@nx/express": "19.5.1",
+    "@nx/jest": "19.5.1",
+    "@nx/js": "19.5.1",
+    "@nx/node": "19.5.1",
     "@nx/react": "19.5.0",
     "@nx/web": "19.5.0",
-    "@nx/webpack": "19.5.0",
+    "@nx/webpack": "19.5.1",
     "@nx/workspace": "19.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
